--- a/simple-express/views/_layouts/master.pug
+++ b/simple-express/views/_layouts/master.pug
@@ -1,10 +1,14 @@
 doctype html 
-hmtl
-  head
-    title MFEE 16 Express 練習
+html 
+    head 
+    title MFEE 16 EXpress 練習
     meta(charset="utf-8")
+    link(rel="stylesheet" href="/styles/main.css")
+    script(src="https://code.jquery.com/jquery-3.6.0.min.js")
+    
+    block scripts 
 
-  body
-    include header
-    block content
-    include footer
+    body 
+        include header 
+        block content 
+        include footer 
